--- a/business-card.html
+++ b/business-card.html
@@ -562,7 +562,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="/Users/arshiyagupta/Desktop/arshiyag11.github.io/alma.png" alt="University of Illinois Logo">
+        <img src="alma.png" alt="University of Illinois Logo">
     </div>
 
     <div class="container">
@@ -595,7 +595,7 @@
                 <div class="qr-item">
                     <div class="qr-box" style="margin-bottom: 8px;">
                         <div class="qr-placeholder">
-                            <img src="/Users/arshiyagupta/Desktop/arshiyag11.github.io/qr_resume.png" alt="QR Code" style="width: 100%; height: 100%;">
+                            <img src="qr_resume.png" alt="QR Code" style="width: 100%; height: 100%;">
                         </div>
                     </div>
                     <div style="font-size: 12px; font-weight: 600;">Scan for Resume</div>
@@ -604,7 +604,7 @@
                 <div class="qr-item">
                     <div class="qr-box" style="margin-bottom: 8px;">
                         <div class="qr-placeholder">
-                            <img src="/Users/arshiyagupta/Desktop/arshiyag11.github.io/qr_linkedin.png" alt="QR Code" style="width: 100%; height: 100%;">
+                            <img src="qr_linkedin.png" alt="QR Code" style="width: 100%; height: 100%;">
                         </div>
                     </div>
                     <div style="font-size: 12px; font-weight: 600;">Scan for LinkedIn</div>
